
[TestSetOutputs/set_outputs_with_invalid_output - 1]
sway-setter -t set_outputs --print <<EOF
[
  {
    "id": 1,
    "name": "HDMI-A-0",
    "foobar": {
      "x": 0,
      "y": 0,
      "width": 1920,
      "height": 1080
    }
  }
]
EOF
Error: output rect is empty

---

[TestSetOutputs/set_outputs_without_name - 1]
sway-setter -t set_outputs --print <<EOF
[
  {
    "id": 383,
    "foo": "DP-2",
    "type": "output",
    "orientation": "none",
    "rect": {
      "x": 1920,
      "y": 0,
      "width": 1920,
      "height": 1080
    }
  }
]
EOF
Error: output name is empty

---

[TestSetOutputs/set_outputs_one_output - 1]
sway-setter -t set_outputs --print <<EOF
[
  {
    "id": 383,
    "name": "DP-2",
    "type": "output",
    "orientation": "none",
    "rect": {
      "x": 1920,
      "y": 0,
      "width": 1920,
      "height": 1080
    }
  }
]
EOF
output DP-2 position 1920 0

---

[TestSetOutputs/set_outputs_multiple_outputs - 1]
sway-setter -t set_outputs --print <<EOF
[
  {
    "id": 383,
    "name": "DP-2",
    "type": "output",
    "orientation": "none",
    "rect": {
      "x": 1920,
      "y": 0,
      "width": 1920,
      "height": 1080
    }
  },
  {
    "id": 384,
    "name": "DP-1",
    "type": "output",
    "orientation": "none",
    "rect": {
      "x": 0,
      "y": 0,
      "width": 1920,
      "height": 1080
    }
  }
]
EOF
output DP-2 position 1920 0
output DP-1 position 0 0

---
